<resources>
    <string name="app_name">EleTool</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur magna tortor, semper eu feugiat eu, vehicula vitae lacus.</string>
    <string name="lorem_ipsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed ultricies risus. Integer nisi orci, lacinia sit amet mi in, mollis scelerisque purus. Nunc risus ligula, maximus eu orci a, facilisis dictum velit. Proin nec laoreet magna. Nulla ut sagittis lorem. Morbi id enim fermentum, semper diam et, tempus leo. Aliquam vel congue orci. Suspendisse potenti. Curabitur finibus diam augue, vel bibendum sapien ultrices non.</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation close</string>
    <string name="login">系统登录</string>
    <string name="addoutaccount">元件减少</string>
    <string name="addinaccount">元件增加</string>
    <string name="outaccountinfo">减少量统计</string>
    <string name="inaccountinfo">增加量统计</string>
    <string name="showinfo">数据管理</string>
    <string name="sysset">系统设置</string>
    <string name="accountflag">便签</string>
    <string name="infomanage">管理</string>
    <string name="flagmanage">便签管理</string>
    <string name="use_condition">使用情况</string>
    <string name="out_info">出库信息</string>
    <string name="in_info">收入信息</string>
    <string name="add_element">新增元件</string>
    <string name="money">金额：</string>
    <string name="note">备注：</string>
    <string name="payer">付款方：</string>
    <string name="kind_of">类别：</string>
    <string name="date_hint">2011–01–01</string>
    <string name="time">时间：</string>
    <string name="text">text</string>
    <string name="bob">bob</string>
    <string name="image">image</string>
    <string name="element_out">元件使用</string>
    <string name="edit">修改</string>
    <string name="delete">删除</string>
    <string name="empty" />
    <string name="model">型号：</string>
    <string name="element_package">封装：</string>
    <string name="print">丝印：</string>
    <string name="sot_23_6">SOT-23-6</string>
    <string name="sx1308">SX1308</string>
    <string name="b628">B628</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="element_manage">元件管理</string>
    <string name="login">系统登录</string>
    <string name="addoutaccount">元件减少</string>
    <string name="addinaccount">元件增加</string>
    <string name="outaccountinfo">减少量统计</string>
    <string name="inaccountinfo">增加量统计</string>
    <string name="showinfo">数据管理</string>
    <string name="sysset">系统设置</string>
    <string name="accountflag">便签</string>
    <string name="infomanage">管理</string>
    <string name="flagmanage">便签管理</string>
    <string name="use_condition">使用情况</string>
    <string name="out_info">出库信息</string>
    <string name="in_info">收入信息</string>
    <string name="add_element">新增元件</string>
    <string name="money">金额：</string>
    <string name="note">备注：</string>
    <string name="payer">付款方：</string>
    <string name="kind_of">类别：</string>
    <string name="date_hint">2011–01–01</string>
    <string name="time">时间：</string>
    <string name="text">text</string>
    <string name="bob">bob</string>
    <string name="image">image</string>
    <string name="element_out">元件使用</string>
    <string name="edit">修改</string>
    <string name="delete">删除</string>
    <string name="empty" />
    <string name="model">型号：</string>
    <string name="element_package">封装：</string>
    <string name="print">丝印：</string>
    <string name="sot_23_6">SOT-23-6</string>
    <string name="sx1308">SX1308</string>
    <string name="b628">B628</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="element_manage">元件管理</string>
</resources>
